--- a/src/Main.css
+++ b/src/Main.css
@@ -1,179 +1,206 @@
 .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
 }
 
 .main-section {
-    margin-top: 20px;
-    margin-bottom: 30px;
-    padding: 0 20px;
+  margin-top: 20px;
+  margin-bottom: 30px;
+  padding: 0 20px;
 }
 
 .main-title {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 42px;
-    text-align: center;
-    line-height: 52px;
-    margin-bottom: 25px;
-    color: #000;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 42px;
+  text-align: center;
+  color: #000;
+  padding-bottom: 5px;
 }
 
-.main-subtitle  {
-    margin-top: 5px;
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-    font-size: 16px;
-    color: #000;
+.main-subtitle {
+  margin-top: 5px;
+  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  font-size: 16px;
+  color: #000;
 }
 
 .section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 50px 100px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 50px 100px;
 }
 
 .section-title {
-    font-family: 'Titillium Web', sans-serif;
-    font-size: 24px;
-    color: #000;
+  font-family: "Titillium Web", sans-serif;
+  font-size: 24px;
+  color: #000;
 }
 
 .section-text {
-    text-align: center;
-    font-size: 14px;
-    margin-top: 10px;
-    font-family: 'Open Sans', sans-serif;
-    color: #000;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 10px;
+  font-family: "Open Sans", sans-serif;
+  color: #000;
 }
-
 
 /* Skills Section */
 .skills-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .skills {
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
-.skills h2, .other-skills h2 {
-    text-align: center;
-    margin-bottom: 10px;
+.skills h2,
+.other-skills h2 {
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 .skill {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .skill-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .skill-section:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 .skills-image {
-    width: 25px;
+  width: 25px;
 }
 
 .express-image {
-    width: 75px;
+  width: 75px;
 }
 
 /* Project Section */
 .project-section {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .project {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .project:last-child {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 /* Backgrounds */
 .primary-bg {
-    background-color: #6187cc;
+  background-color: #6187cc;
 }
 
+/* Typing Effect On Title */
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
 
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #6187cc;
+  }
+}
 
 /* Media Queries */
-@media screen and (min-width: 768px){
-    .container {
-        min-width: 100%;
-    }
+@media screen and (min-width: 768px) {
+  .container {
+    min-width: 100%;
+  }
 
-    .main-section {
-        padding: 50px 20px;
-    }
+  .main-section {
+    padding: 50px 20px;
+  }
 
-    .main-title {
-        font-size: 72px;
-    }
+  .main-title {
+    font-size: 72px;
+    /* Typewriter Effect */
+    overflow: hidden;
+    border-right: .15em solid #6187cc; 
+    white-space: nowrap; 
+    margin: 0 auto; 
+    letter-spacing: .15em; 
+    animation: 
+        typing 3.5s steps(200, end),
+        blink-caret .75s step-end infinite;
+  }
 
-    .main-subtitle {
-        font-size: 20px;
-    }
+  .main-subtitle {
+    font-size: 20px;
+  }
 
-    .section {
-        padding: 100px 500px;
-    }
+  .section {
+    padding: 100px 500px;
+  }
 
-    .section-title {
-        font-size: 32px;
-    }
+  .section-title {
+    font-size: 32px;
+  }
 
-    .section-text {
-        font-size: 16px;
-    }
+  .section-text {
+    font-size: 16px;
+  }
 
-    /* Skills Section */
-    .skills {
-        margin-right: 200px;
-    }
+  /* Skills Section */
+  .skills {
+    margin-right: 200px;
+  }
 
-    .skill {
-        font-size: 50px;
-    }
+  .skill {
+    font-size: 50px;
+  }
 
-    .skills-image {
-        width: 50px;
-    }
+  .skills-image {
+    width: 50px;
+  }
 
-    .express-image {
-        width: 75px;
-    }
+  .express-image {
+    width: 75px;
+  }
 
-    .lg-title {
-        font-size: 32px;;
-    }
+  .lg-title {
+    font-size: 32px;
+  }
 
-    /* Projects Section */
-    .project-section {
-        display: flex;
-        flex-direction: row;
-    }
-    
-    .project {
-        margin-right: 20px;
-    }
+  /* Projects Section */
+  .project-section {
+    display: flex;
+    flex-direction: row;
+  }
 
-    .project:last-child {
-        margin-right: 0;
-    }
+  .project {
+    margin-right: 20px;
+  }
+
+  .project:last-child {
+    margin-right: 0;
+  }
 }
