--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -88,7 +88,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background: #333;
@@ -96,16 +96,19 @@
     left: 0;
     transition: 1s ease-in;
     padding: 25px;
+    z-index: 1;
 }
 
 .menu-items-mobile {
     text-align: center;
     font-size: 22px;
+    padding-left: 0;
 }
 
 .x {
     font-size: 28px;
     margin: 50px 0;
+    color: #6187cc;
 }
 
 @media screen and (min-width: 768px){
