--- a/src/Main.css
+++ b/src/Main.css
@@ -69,13 +69,9 @@ html, body {
 /* Skills Section */
 .skills-container {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.skills {
-  margin-right: 50px;
-  width: 50%;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .skills h2,
@@ -141,6 +137,10 @@ form {
 }
 
 /* Bootstrap Customization */
+.card {
+  border-radius: 0;
+}
+
 .btn-primary {
   background-color: #6187cc;
   border: none;
@@ -179,6 +179,10 @@ form {
 @media screen and (max-width: 768px) {
   .project {
     margin-bottom: 20px;
+  }
+
+  .skills {
+     margin-bottom: 50px;     
   }
 }
 
@@ -224,9 +228,9 @@ form {
   }
 
   /* Skills Section */
-  .skills {
-    margin-right: 200px;
-  }
+ .skills-container {
+  flex-direction: row;
+ }
 
   .skill {
     font-size: 50px;
